# IP-Manager

./: CMakeLists.txt  FirewallManager.cpp  FirewallManager.h  Models.h  README.md  Utils.cpp  Utils.h  blacklist.txt  blockIPs.txt  main.cpp  whitelist.txt
